add coi.js on deployment

--- a/shell.html
+++ b/shell.html
@@ -34,6 +34,7 @@
         body { margin: 0px; }
         canvas.emscripten { border: 0px none; background-color: black; }
     </style>
+    <script src="coi.js"></script>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"> </script>
     <script type='text/javascript'>
         function saveFileFromMEMFSToDisk(memoryFSname, localFSname)     // This can be called by C/C++ code
