patch web game styles

--- a/shell.html
+++ b/shell.html
@@ -39,13 +39,8 @@
             background: #000;
         }
         canvas.emscripten {
-            border: 0;
+            border: 1px solid gold;
             background-color: black;
-
-            --ratio: calc(320 / 240);
-            --vwidth: 60%;
-            width: var(--vwidth);
-            height: calc(var(--vwidth) / var(--ratio));
         }
     </style>
     <script src="coi.js"></script>
